# zephyr

./: CMakeLists.txt  Kconfig.zephyr  MAINTAINERS.yml  west.yml
arch/: Kconfig  archs.yml
arch/common/: CMakeLists.txt
arch/rh850/: CMakeLists.txt  Kconfig
cmake/: gcc-m-cpu.cmake
cmake/flash/: CMakeLists.txt
doc/releases/: migration-guide-4.4.rst
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.renesas_rh850_adcj  Kconfig.renesas_rh850_adck  adc_renesas_ra.c  adc_renesas_rh850_adcj.c  adc_renesas_rh850_adck.c  adc_renesas_rx.c
drivers/can/: CMakeLists.txt  Kconfig  Kconfig.renesas_rh850  can_renesas_ra.c  can_renesas_rh850_canfd.c
drivers/counter/: Kconfig  (+4 more)
modules/: Kconfig  Kconfig.renesas  Kconfig.renesas_fsp
samples/modules/tflite-micro/face_detection_ethos/: CMakeLists.txt  Kconfig  README.rst  prj.conf
samples/modules/tflite-micro/face_detection_ethos/ai_application/: common_util.h
samples/modules/tflite-micro/face_detection_ethos/ai_application/common/: ImageUtils.cc  PlatformMath.hpp
samples/modules/tflite-micro/face_detection_ethos/ai_application/face_detection/: DetectorPostProcessing.hpp  inference_process.cc  inference_process.hpp
samples/modules/tflite-micro/face_detection_ethos/ai_application/face_detection/model/: model_data.h
samples/modules/tflite-micro/face_detection_ethos/boards/: ek_ra8p1_r7ka8p1kflcac_cm85.conf  ek_ra8p1_r7ka8p1kflcac_cm85.overlay
samples/modules/tflite-micro/face_detection_ethos/src/: ai_processing.cc  ai_processing.h  camera.c  camera.h  display.c  display.h  main.c
tests/drivers/pinctrl/renesas/: CMakeLists.txt  Kconfig  prj.conf  testcase.yaml
tests/drivers/pinctrl/renesas/boards/: rcar_ironhide_x5h_r8a7800_r52.overlay
tests/drivers/pinctrl/renesas/src/: main_rcar.c
tests/subsys/usb/hid_report/: CMakeLists.txt  main.c  tests.yaml
(+861 files in other folders)
