cmake_minimum_required(VERSION 3.20.0)

add_compile_definitions(
CONFIG_USBH_HID_REPORT_MAX_USAGES=16
CONFIG_USBH_HID_REPORT_MAX_VARIANTS=32
CONFIG_USBH_HID_REPORT_MAX_COLLECTIONS=16
CONFIG_USBH_HID_REPORT_MAX_FIELDS=32
CONFIG_USBH_HID_REPORT_MAX_STATE_STACK=8
CONFIG_USBH_HID_CLASS=1
)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

project(app)
find_package(Zephyr COMPONENTS unittest REQUIRED HINTS $ENV{ZEPHYR_BASE})
target_sources(testbinary PRIVATE main.c ${ZEPHYR_BASE}/subsys/usb/host/class/hid/hid_report.c)
